name:                harum
version:             0.0.1
synopsis:            Type-safe market computation thing
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            Database
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:

                  Types
                  Bittrex
                  GenericClient
                  Harum

  build-depends:       base >=4.8
                     , base-unicode-symbols
                     , cabal-doctest
                     , containers >=0.5
                     , doctest
                     , ghc-prim >=0.4
                     , hashable
                     , safe
                     , text
                     , transformers
                     , unordered-containers
                     , zippers
                     
                     , aeson
                     , either
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , lens
                     , QuickCheck
                     , servant
                     , servant-client

                     , brick
                     , classy-prelude
                     , data-default
                     , dependent-sum
                     , fuzzy
                     , libmpd
                     , microlens
                     , microlens-th
                     , microlens-platform
                     , safe-exceptions
                     , template-haskell
                     , text-zipper
                     , vty

                     , semigroupoids
                     , semigroups
                     , split
                     , time
                     , vector

  default-extensions:
                     FlexibleContexts
                   , FlexibleInstances
                   , GADTs
                   , OverloadedStrings
                   , KindSignatures
                   , LambdaCase
                   , RecordWildCards
                   , StandaloneDeriving
                   , TypeOperators
                   , UnicodeSyntax
                   , ViewPatterns

executable harum
  hs-source-dirs:      .
  default-language:    Haskell2010

  main-is:             ui.hs

  build-depends:       base >=4.8
                     , base-unicode-symbols
                     , cabal-doctest
                     , containers >=0.5
                     , doctest
                     , ghc-prim >=0.4
                     , hashable
                     , safe
                     , text
                     , transformers
                     , unordered-containers
                     , zippers
                     
                     , aeson
                     , either
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , lens
                     , QuickCheck
                     , servant
                     , servant-client

                     , brick
                     , classy-prelude
                     , data-default
                     , dependent-sum
                     , fuzzy
                     , libmpd
                     , microlens
                     , microlens-th
                     , microlens-platform
                     , safe-exceptions
                     , template-haskell
                     , vty

                     , semigroupoids
                     , semigroups
                     , split
                     , time
                     , vector

  default-extensions:
                     FlexibleContexts
                   , FlexibleInstances
                   , GADTs
                   , OverloadedStrings
                   , KindSignatures
                   , LambdaCase
                   , RecordWildCards
                   , StandaloneDeriving
                   , TypeOperators
                   , UnicodeSyntax
                   , ViewPatterns
